sonarlint fix